# rust-notes

./: Cargo.toml  README.md  plan.md
cc/: CMakeLists.txt  README.md  main.cpp
cc/rustlib/: Cargo.toml
cc/rustlib/src/: lib.rs
demos/: main.rs
notes/: 00-setup.md  01-basics.md  02-ownership.md  03-lifetime.md  03-result.md  04-result.md  04-trait.md  05-build.md  05-trait.md  06-build.md  06-ecosystem.md  06-style.md  07-module.md  07-style.md  07-sytle.md  08-memory.md  08-module.md  09-concurrency.md  09-memory.md  10-async.md  10-concurrency.md  11-async-advanced.md  11-async.md  11-coroutine.md  12-async-advanced.md  12-unsafe.md  13-ffi.md  13-unsafe.md  14-ffi.md  14-lifetime.md  15-testing.md  16-perf.md  17-error-handling.md  18-crate-design.md  18-stdlib.md  19-async-advanced.md  19-demo.md  20-no-std-demo.md
scripts/: fmt-check.sh  lint-md.sh  run-all.sh
src/: main.rs
